--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror = "1.0"
 lazy_static = "1.4.0"
 rand = { version = "0.8.5", features = ["small_rng"] }
 rand_distr = "0.4.3"
@@ -14,3 +15,6 @@ nalgebra = "0.32.3"
 polars = { version = "0.32.1", features = ["lazy"] }
 ndarray = { version = "0.15.6", features = ["serde"] }
 petgraph = "0.6.4"
+
+[dev-dependencies]
+assert_matches = "1.5"
