--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ nalgebra = "0.32.3"
 polars = { version = "0.32.1", features = ["lazy"] }
 ndarray = { version = "0.15.6", features = ["serde"] }
 petgraph = "0.6.4"
+pretty_env_logger = "0.5.0"
+log = "0.4.20"
 
 [dev-dependencies]
 assert_matches = "1.5"
