--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "evo-rl"
+description = "A neuroevolution-based ML library for reinforcement learning inspired by NEAT"
+license = "MIT OR Apache-2.0"
+licensefile = "LICENSE"
 version = "0.1.0-alpha.1"
 edition = "2021"
 authors = ["Dawnis Chow"]
@@ -13,7 +16,6 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 rand_distr = "0.4.3"
 rand_seeder = "0.2.3"
 nalgebra = "0.32.3"
-polars = { version = "0.32.1", features = ["lazy"] }
 ndarray = { version = "0.15.6", features = ["serde"] }
 petgraph = "0.6.4"
 pretty_env_logger = "0.5.0"
