--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ licensefile = "LICENSE"
 version = "0.1.0-alpha.2"
 edition = "2021"
 authors = ["Dawnis Chow"]
-exclude =[".dot", ".png", "*.ipynb", "agents/", ".ipynb_checkpoints/", "python/"]
+exclude =[".dot", ".png", ".ipynb", "agents/", ".ipynb_checkpoints/", "python/"]
 
 [lib]
 name = "evo_rl"
