--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 rand_distr = "0.4.3"
 rand_seeder = "0.2.3"
 nalgebra = "0.32.3"
-pyo3 = { versions = "0.20.3", features = ["extension-module"] }
+pyo3 = { version = "0.20.3", features = ["extension-module"] }
 pyo3-log = "0.9.0"
 ndarray = { version = "0.15.6", features = ["serde"] }
 petgraph = "0.6.4"
