--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ ndarray = { version = "0.15.6", features = ["serde"] }
 petgraph = "0.6.4"
 pretty_env_logger = "0.5.0"
 log = "0.4.20"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 assert_matches = "1.5"
