--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ pretty_env_logger = "0.5.0"
 log = "0.4.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 
 [package.metadata.docs.rs]
