--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,15 +34,16 @@ serde_json = "1.0"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 
+[dev-dependencies]
+assert_matches = "1.5"
+wiremock = "0.5"
+
 [package.metadata.docs.rs]
 all-features = true
 
 [package.metadata]
 documentation = "https://docs.rs/evo_rl"
 repository = "https://github.com/dawnis/evo_rl"
-
-[dev-dependencies]
-assert_matches = "1.5"
 
 [build-dependencies]
 pyo3-build-config = "0.21.2"
