--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 assert_matches = "1.5"
-wiremock = "0.5"
+httpmock = "0.7.0-rc.1"
 
 [package.metadata.docs.rs]
 all-features = true
